practice/yaml/kafka/producer.yaml
# deploy the image from test-kafka as a pod 
apiVersion: v1
kind: Pod 
metadata:
  name: producer
  labels:
    app: kafka
spec:
  containers:
  - name: producer
    image: tonyliu666/kafka:latest
    ports:
    - containerPort: 9092
