practice/yaml/kafka/nodeport-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-broker0
  namespace: kafka
spec:
  ports:
  - name: broker
    port: 9092
    targetPort: 9092
    nodePort: 30092
  selector: 
    statefulset.kubernetes.io/pod-name: my-cluster-kafka-0
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-broker1
  namespace: kafka
spec:
  ports:
  - name: broker
    port: 9092
    targetPort: 9092
    nodePort: 30093
  selector: 
    statefulset.kubernetes.io/pod-name: my-cluster-kafka-1
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-broker2
  namespace: kafka
spec:
  ports:
  - name: broker
    port: 9092
    targetPort: 9092
    nodePort: 30094
  selector: 
    statefulset.kubernetes.io/pod-name: my-cluster-kafka-2
  type: NodePort
