practice/yaml/kafka/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: kafka

spec:
  ingressClassName: nginx
  rules:
    - host: minikube-kafka-testing.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-cluster-kafka-brokers
              port:
                number: 9092
